--- a/ubiquitel-midi-app/src/app/components/ubi-card/ubi-card.component.html
+++ b/ubiquitel-midi-app/src/app/components/ubi-card/ubi-card.component.html
@@ -1,3 +1,8 @@
-<div>
-  <p>Ubi Card Component!!</p>
+<div class="ubi-card-container">
+  <div class="hit-indicator"></div>
+  <div class="">
+    <p>Channel</p>
+    <p>Finger Id</p>
+    <p>Run Time</p>
+  </div>
 </div>
