adding bootstrap to the project

--- a/ubiquitel-midi-app/src/app/components/ubi-card/ubi-card.component.html
+++ b/ubiquitel-midi-app/src/app/components/ubi-card/ubi-card.component.html
@@ -1,8 +1,10 @@
-<div class="ubi-card-container">
-  <div class="hit-indicator"></div>
-  <div class="">
-    <p>Channel</p>
-    <p>Finger Id</p>
-    <p>Run Time</p>
+<div class="ubi-card-container row">
+  <div class="hit-indicator col-sm-2"></div>
+  <div class="col-sm-10">
+    <div class="row">
+      <div class="col-sm-2">Channel</div>
+      <div class="col-sm-2">Finder ID</div>
+      <div class="col-sm-2">Run Time</div>
+    </div>
   </div>
 </div>
