--- a/Parent/src/components/Finger/style.scss
+++ b/Parent/src/components/Finger/style.scss
@@ -15,13 +15,20 @@
 
     .timeline {
         width: 100%;
+        position: relative;
 
         &::before {
             display: block;
             content: ' ';
             border-top: 1px solid white;
             position: relative;
-            top: 50%;
+            top: 60px;
+        }
+
+        .dot {
+            position: absolute;
+            border-radius: 50%;
+            background-color: white;
         }
     }
 }
