--- a/Parent/src/components/Finger/style.scss
+++ b/Parent/src/components/Finger/style.scss
@@ -1,7 +1,11 @@
+@import '../../styles/colors';
+@import '../../styles/effects';
+
 .finger--component {
     width: 100%;
     display: flex;
-    border: 1px solid #777;
+    padding: 20px;
+    background-color: $color--yellow__light;
 
     .header {
         width: 100px;
@@ -9,7 +13,7 @@
             width: 100%;
         }
         p {
-            color: white;
+            color: #FF180A;
         }
     }
 
@@ -20,7 +24,7 @@
         &::before {
             display: block;
             content: ' ';
-            border-top: 1px solid white;
+            border-top: 4px solid $color--pink__dark;
             position: relative;
             top: 60px;
         }
@@ -28,7 +32,8 @@
         .dot {
             position: absolute;
             border-radius: 50%;
-            background-color: white;
+            background-color: $color--red;
+            box-shadow: $shadow--medium;
         }
     }
 }
