--- a/Parent/src/components/Waveform/style.scss
+++ b/Parent/src/components/Waveform/style.scss
@@ -1,19 +1,22 @@
+@import '../../styles/colors';
+
 .waveform--component {
   width: 100%;
-  height: 200px;
+  // height: 200px;
   display: flex;
 
   .header {
     width: 100px;
+    background-color: $color--yellow__light;
   }
 
   .body {
     width: 100%;
-    background-color: #777;
+    background-color: $color--yellow__light;
   }
 
   #waveform {
     width: 100%;
-    height: 120px;
+    // height: 120px;
   }
 }
