--- a/Parent/src/components/Control/style.scss
+++ b/Parent/src/components/Control/style.scss
@@ -5,8 +5,20 @@
   height: 100px;
 }
 
+.control--button-container {
+  float: left;
+  border: 1px solid $color--pink__dark;
+  border-radius: 8px;
+}
+
 .control--button {
   background-color: transparent;
   border: none;
+  border-right: 1px solid $color--pink__dark;
   color: $color--red;
+  font-size: 60px;
+
+  &:last-child {
+    border-right: none;
+  }
 }
