--- a/Parent/src/components/Finger/style.scss
+++ b/Parent/src/components/Finger/style.scss
@@ -2,7 +2,7 @@
 @import '../../styles/effects';
 
 .finger--component {
-    width: 100%;
+    width: calc(100% - 40px);
     display: flex;
     padding: 20px;
     background-color: $color--yellow__light;
@@ -14,12 +14,14 @@
         }
         p {
             color: #FF180A;
+            text-align: center;
         }
     }
 
     .timeline {
         width: 100%;
         position: relative;
+        overflow-x: scroll;
 
         &::before {
             display: block;
