--- a/Parent/src/components/Waveform/style.scss
+++ b/Parent/src/components/Waveform/style.scss
@@ -1,18 +1,18 @@
 @import '../../styles/colors';
 
 .waveform--component {
-  width: 100%;
+  width: calc(100% - 40px);
   // height: 200px;
   display: flex;
+  padding: 20px;
+  background-color: $color--yellow__light;
 
   .header {
     width: 100px;
-    background-color: $color--yellow__light;
   }
 
   .body {
     width: 100%;
-    background-color: $color--yellow__light;
   }
 
   #waveform {
