--- a/Parent/src/components/Control/style.scss
+++ b/Parent/src/components/Control/style.scss
@@ -7,18 +7,25 @@
 
 .control--button-container {
   float: left;
-  border: 1px solid $color--pink__dark;
+  // border: 1px solid $color--pink__dark;
   border-radius: 8px;
 }
 
 .control--button {
-  background-color: transparent;
+  background-color: $color--yellow__light;
   border: none;
-  border-right: 1px solid $color--pink__dark;
+  // border-right: 1px solid $color--pink__dark;
   color: $color--red;
-  font-size: 60px;
+  padding: 12px;
+  border-radius: 12px;
+  margin: 20px 12px 20px 0;
 
-  &:last-child {
-    border-right: none;
+  img {
+    width: 72px;
+    height: 72px;
   }
+
+  // &:last-child {
+  //   border-right: none;
+  // }
 }
