--- a/Parent/src/styles/colors.scss
+++ b/Parent/src/styles/colors.scss
@@ -2,3 +2,4 @@ $color--red: #FF180A;
 $color--pink__dark: #FF7BAC;
 $color--pink__light: #F2C9D1;
 $color--yellow__light: #F5EEDC;
+$color--yellow__dark: #FFBB22;
