--- a/Parent/src/styles/colors.scss
+++ b/Parent/src/styles/colors.scss
@@ -3,3 +3,4 @@ $color--pink__dark: #FF7BAC;
 $color--pink__light: #F2C9D1;
 $color--yellow__light: #F5EEDC;
 $color--yellow__dark: #FFBB22;
+$color--blue__medium: #01FFFF;
