--- a/Parent/src/components/FingerNode/style.scss
+++ b/Parent/src/components/FingerNode/style.scss
@@ -7,15 +7,33 @@
    border: 1px solid white;
 
   .finger-node--image-container {
-     width: 100%;
-     padding: 15px;
+    width: calc(100% - 30px);
+    height: calc(100% - 30px);
+    padding: 15px;
 
-     &.muted {
-       filter: grayscale(1);
-     }
+    &.muted {
+      img {
+        filter: grayscale(1);
+      }
+    }
+
+    &.solo {
+      img {
+        filter: brightness(2);
+      }
+    }
+
+    &.recording {
+      background-color: rgb(220, 30, 80);
+
+      img {
+        filter: grayscale(1);
+        mix-blend-mode: multiply;
+      }
+    }
 
     img {
-      width: calc(100% - 30px);
+      width: 100%;
     }
   }
 
@@ -26,30 +44,58 @@
   .finger-node--controls {
     display: flex;
     margin-top: 12px;
-    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
 
-    .finger-node--control {
-      width: 30px;
-      height: 30px;
-      border: 1px solid white;
+    .finger-node--button-group {
       display: flex;
-      align-items: center;
-      justify-content: center;
 
-      .finger-node--control-copy {
-        color: white;
+      .finger-node--control {
+        width: 30px;
+        height: 30px;
+        border: 1px solid white;
+        display: flex;
+        cursor: pointer;
+        align-items: center;
+        justify-content: center;
+  
+        .finger-node--control-copy {
+          color: white;
+        }
+  
+        &.recording.active {
+          background-color: red;
+        }
+  
+        &.solo.active {
+          background-color: blue;
+        }
+  
+        &.mute.active {
+          background-color: gray;
+        }
+      }
+    }
+
+    .finger-node--in-act {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background-color: rgb(0, 255, 180);
+      opacity: 0.3;
+
+      &.tapping {
+        opacity: 1;
       }
 
-      &.recording.active {
-        background-color: red;
-      }
-
-      &.solo.active {
-        background-color: blue;
-      }
-
-      &.mute.active {
-        background-color: gray;
+      &.recording {
+        width: 16px;
+        height: 16px;
+        background-color: #fff;
+        opacity: 0.7;
       }
     }
   }
