--- a/Parent/src/containers/Mesh/style.scss
+++ b/Parent/src/containers/Mesh/style.scss
@@ -1,3 +1,22 @@
+.controls {
+  display: flex;
+  background-color: black;
+  color: white;
+}
+
+.control--button {
+  background-color: black;
+  border: 1px solid white;
+  color: white;
+  padding: 12px;
+  margin: 0;
+
+  img {
+    width: 18px;
+    height: 18px;
+  }
+}
+
 .container__mesh {
   background-color: #000;
   width: 100vw;
